--- a/src/assets/scss/component/_scrollbar.scss
+++ b/src/assets/scss/component/_scrollbar.scss
@@ -3,7 +3,7 @@
     height: 4px;
 
     &-thumb {
-        background-color: $secondary;
+        background-color: $danger;
         border-radius: $border-radius;
     }
 
